# alquran-cli

./: README.md  pyproject.toml  requirements.txt
alquran/: alquran.py  cli.py  hadits.py  surah.py
