[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alquran-cli"
version = "0.1.1"
description = "CLI untuk memberikan isi alquran dan hadits"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "requests>=2.32.3",
]

[project.scripts]
alquran = "alquran.alquran:cli"
