[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
long_description = { file = "README.md" }
long_description_content_type = "text/markdown"

[project]
name = "alquran-cli"
version = "0.1.2"
description = "CLI untuk memberikan isi alquran dan hadits"
authors = [
    { name = "Anggi Ananda", email = "anggiangga443@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "requests>=2.32.3",
]

[project.urls]
homepage = "https://github.com/anggiAnand/alquran-cli.git"
repository = "https://github.com/anggiAnand/alquran-cli.git"

[project.scripts]
alquran = "alquran.alquran:cli"
